gig index fixed except vertical alignement

--- a/app/assets/stylesheets/gigs/_gigs_index.scss
+++ b/app/assets/stylesheets/gigs/_gigs_index.scss
@@ -1,4 +1,11 @@
-gig-tit.candidatar-gig-title {
+.index-gigs-card-highlight {
+  background: #919191;
+  box-shadow: 0 18px 35px rgba(0, 0, 0, 0.5), 0 8px 15px rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  padding: 8px;
+}
+
+.candidatar-gig-title {
   padding: 32px;
   font-size: 64px;
 }
@@ -25,9 +32,8 @@ height: 425px;
 .gig-show-description-title {
   color: rgba(255, 255, 255, 0.5);
 }
-.separator-line {
-  border: 1px solid gray;
-}
+
+
 .gig-card-description {
   padding-top: 15px;
   // margin-bottom: 24px;
@@ -47,6 +53,8 @@ height: 425px;
 .gig-card-localizacao {
 
   color: rgba(255,255,255,0.5);
+  text-align: center;
+  font-family: $body-font !important;
 }
 
 
@@ -88,12 +96,13 @@ height: 425px;
 }
 
 .photo-container {
-  margin-bottom: 16px;
-  width: 270px;
-  height: 130px;
+  padding: 0 !important;
+  width: auto;
+  height: auto ;
+  border-radius: 4px 0px 4px 0px;
 
   img {
-    border-radius: 5px;
+ 
     width: 100%;
     height: 100%;
   }
@@ -104,13 +113,12 @@ height: 425px;
 }
 
 .gig-card-details {
-  display: flex;
-  justify-content: center;
+text-align: center;
 }
 
 .gig-card-price {
-  padding-top: 10px;
   font-size: 20px;
+  font-family: $body-font !important;
 }
 
 .gig-card-align-item {
